digital_ocean/echo_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
spec:
  rules:
    - host: taxisbahia.cl
      http:
        paths:
          - backend:
              serviceName: echo1
              servicePort: 80
    - host: taxisbahia.cl
      http:
        paths:
          - backend:
              serviceName: echo2
              servicePort: 80
